<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="118dp"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:padding="@dimen/size_16">

    <FrameLayout
        android:layout_width="76dp"
        android:layout_height="76dp">

        <com.nhahv.parsehtml.views.CircleImageView
            android:id="@+id/image_logo"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:src="@drawable/ic_logo_number" />

        <TextView
            android:id="@+id/text_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/number"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/size_10"
        android:layout_marginStart="@dimen/size_10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:gravity="center_vertical"
            android:text="@string/name_music"
            android:textColor="#4B4B4B"
            android:textSize="@dimen/size_20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_artist"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/name_artist"
                android:textColor="#4B505B"
                android:textSize="@dimen/size_18sp" />

            <ImageView
                android:id="@+id/image_downloads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@null"
                android:src="@drawable/ic_file_download_black_48dp"
                android:text="@string/downloads" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>