<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="132dp"
    android:background="@android:color/white"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@null"
        android:paddingBottom="@dimen/size_10"
        android:paddingTop="@dimen/size_10"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_logo" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/size_10"
        android:layout_marginStart="@dimen/size_10"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingBottom="@dimen/size_10"
        android:paddingTop="@dimen/size_10">

        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_music"
            android:textColor="#4B4B4B"
            android:textSize="@dimen/size_20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10"
            android:text="@string/name_artist"
            android:textColor="#4B505B"
            android:textSize="@dimen/size_18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:contentDescription="@null"
                android:src="@drawable/ic_headset" />

            <TextView
                android:id="@+id/text_like"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/text_like" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>